--- a/PessoaFrontend/angular.json
+++ b/PessoaFrontend/angular.json
@@ -26,7 +26,9 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@progress/kendo-theme-default/dist/all.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
