--- a/PessoaFrontend/package.json
+++ b/PessoaFrontend/package.json
@@ -20,6 +20,13 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@progress/kendo-angular-buttons": "^18.1.0",
+    "@progress/kendo-angular-dropdowns": "^18.1.0",
+    "@progress/kendo-angular-grid": "^18.1.0",
+    "@progress/kendo-angular-inputs": "^18.1.0",
+    "@progress/kendo-angular-l10n": "^18.1.0",
+    "@progress/kendo-theme-default": "^10.2.0",
+    "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -28,6 +35,7 @@
     "@angular-devkit/build-angular": "^16.2.16",
     "@angular/cli": "^16.2.16",
     "@angular/compiler-cli": "^16.2.0",
+    "@angular/localize": "^16.2.12",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
